@@ -1,7 +1,0 @@
-require 'test_helper'
-
-class CreatorTest < ActiveSupport::TestCase
-  # test "the truth" do
-  #   assert true
-  # end
-end
